--- a/74105-h/74105-h.htm
+++ b/74105-h/74105-h.htm
@@ -10229,6 +10229,6 @@ unhealthy effect upon their readers.”</p>
 <p>New original cover art included with this eBook is granted to the public domain.</p>
 </div></div>
 
-<div style='text-align:center'>*** END OF THE PROJECT GUTENBERG EBOOK 74105 ***</div>
+</body>
 </html>
 
